force-app/main/default/objects/SmartIntake_Session__c/SmartIntake_Session__c.object-meta.xml
<CustomObject>
    <label>SmartIntake Session</label>
    <nameField>
        <displayFormat>SIS-{000000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SmartIntake Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>