force-app/main/default/objects/SmartIntake_Session__c/fields/Answers_JSON__c.field-meta.xml
<CustomField>
    <fullName>Answers_JSON__c</fullName>
    <description>Server-side persisted intake answers for an in-progress SmartIntake session.</description>
    <label>Answers JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>