force-app/main/default/objects/SmartIntake_Session__c/fields/Current_Question_Key__c.field-meta.xml
<CustomField>
    <fullName>Current_Question_Key__c</fullName>
    <description>The current metadata question key for resume/back/skip navigation.</description>
    <label>Current Question Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>