force-app/main/default/objects/SmartIntake_Session__c/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Last server-side update time for this intake session.</description>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>