force-app/main/default/objects/SmartIntake_Session__c/fields/Question_History_JSON__c.field-meta.xml
<CustomField>
    <fullName>Question_History_JSON__c</fullName>
    <description>Server-side navigation history for answered or skipped question keys.</description>
    <label>Question History JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>