force-app/main/default/objects/SmartIntake_Session__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Opaque SmartIntake runtime session identifier. This is not a Salesforce session id.</description>
    <externalId>true</externalId>
    <label>Session Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>