force-app/main/default/objects/SmartIntake_Session__c/fields/Skipped_Question_Keys_JSON__c.field-meta.xml
<CustomField>
    <fullName>Skipped_Question_Keys_JSON__c</fullName>
    <description>Question keys skipped by the user when metadata allowed the skip.</description>
    <label>Skipped Question Keys JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>